--- a/html/bag.html
+++ b/html/bag.html
@@ -19,12 +19,14 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
+        text-decoration: underline;
       }
       .divbox1 {
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: center;
         gap: 150px;
+        margin-bottom: 20px;
       }
 
       .images {
