--- a/html/Kendalls.html
+++ b/html/Kendalls.html
@@ -44,10 +44,12 @@
               <a href="index.html">FWRD</a>
             </div>
             <div>
-              <span>
-                <input type="text" placeholder="search" /><button
-                  class="st-button"
-                >
+              <span style="border-bottom: 1px solid black">
+                <input
+                  type="text"
+                  placeholder="search"
+                  style="border: none; margin-bottom: 5px"
+                /><button class="st-button">
                   <i class="fa-solid fa-magnifying-glass"></i>
                 </button>
               </span>
