--- a/html/new.html
+++ b/html/new.html
@@ -456,11 +456,7 @@
                 >
               </div>
               <div>
-                <a
-                  href="shops.html"
-                  onclick="displayCards('shops'); event.preventDefault();"
-                  >shops</a
-                >
+                <a href="shops.html">shops</a>
                 <div class="st-content st-shopsDD">
                   <div>
                     <img
