--- a/html/designer.html
+++ b/html/designer.html
@@ -408,7 +408,7 @@
               <div>
                 <a
                   href="new.html"
-                  onclick="displayCards('beauty'); event.preventDefault();"
+                  onclick="event.preventDefault(); displayCards('beauty'); "
                   >beauty</a
                 >
                 <div class="st-content st-beautyDD">
