--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,7 @@
             </div>
 
             <div>
-              <a class="status" href="signinup.html">Sign In</a>
+              <a class="status" href="signinup.html" id="s1">Sign In</a>
             </div>
           </div>
 
