--- a/html/shops.html
+++ b/html/shops.html
@@ -29,7 +29,7 @@
             </div>
 
             <div>
-              <a href="signinup.html">Sign In</a>
+              <a href="signinup.html" id="s1">Sign In</a>
             </div>
           </div>
 
