--- a/html/Kendalls.html
+++ b/html/Kendalls.html
@@ -32,7 +32,7 @@
             </div>
 
             <div>
-              <a href="signinup.html">Sign In</a>
+              <a href="signinup.html" id="s1">Sign In</a>
             </div>
           </div>
 
