--- a/html/bag.html
+++ b/html/bag.html
@@ -145,7 +145,7 @@
           </div>
 
           <div>
-            <a href="signinup.html">Sign In</a>
+            <a href="signinup.html" id="s1">Sign In</a>
           </div>
         </div>
 
