--- a/html/designer.html
+++ b/html/designer.html
@@ -36,7 +36,7 @@
             </div>
 
             <div>
-              <a href="signinup.html">Sign In</a>
+              <a href="signinup.html" id="s1">Sign In</a>
             </div>
           </div>
 
