updated css for designer page

--- a/html/designer.html
+++ b/html/designer.html
@@ -525,15 +525,15 @@
         <!-- rahul and pradeep -->
 
         <div id="deepSideBar">
-          <a href="">All Designers</a>
-          <a href="">Clothing</a>
-          <a href="">Bags</a>
-          <a href="">Shoes</a>
-          <a href="">Jewelry</a>
-          <a href="">Accessories</a>
-          <a href="">Beauty</a>
-          <a href="">Home</a>
-          <a href="">Pre-Owned</a>
+          <a href="#">All Designers</a>
+          <a href="#">Clothing</a>
+          <a href="#">Bags</a>
+          <a href="#">Shoes</a>
+          <a href="#">Jewelry</a>
+          <a href="#">Accessories</a>
+          <a href="#">Beauty</a>
+          <a href="#">Home</a>
+          <a href="#">Pre-Owned</a>
         </div>
         <div id="deepDesigner"></div>
       </main>
