added all designer heading

--- a/html/designer.html
+++ b/html/designer.html
@@ -525,6 +525,7 @@
         <!-- rahul and pradeep -->
 
         <div id="deepSideBar">
+          <h4>ALL DESIGNERS</h4>
           <a href="#">All Designers</a>
           <a href="#">Clothing</a>
           <a href="#">Bags</a>
@@ -535,7 +536,9 @@
           <a href="#">Home</a>
           <a href="#">Pre-Owned</a>
         </div>
-        <div id="deepDesigner"></div>
+        <div id="deepDesigner">
+          <h4>ALL DESIGNERS</h4>
+        </div>
       </main>
 
       <footer>
