--- a/html/bag.html
+++ b/html/bag.html
@@ -145,7 +145,7 @@
           </div>
 
           <div>
-            <a href="signinup.html">Sign In</a>
+            <a href="signinup.html" id="s1">Sign In</a>
           </div>
         </div>
 
@@ -664,9 +664,9 @@
             </div>
 
             <div>
-              <p id="subtotal">₹97,562.20</p>
+              <p id="subtotal">₹0</p>
               <p>0.00</p>
-              <p id="estimatedtotal">₹141,465.19</p>
+              <p id="estimatedtotal">₹0</p>
             </div>
           </div>
 
