--- a/html/designer.html
+++ b/html/designer.html
@@ -36,7 +36,7 @@
             </div>
 
             <div>
-              <a href="signinup.html">Sign In</a>
+              <a href="signinup.html" id="s1">Sign In</a>
             </div>
           </div>
 
@@ -408,7 +408,7 @@
               <div>
                 <a
                   href="new.html"
-                  onclick="displayCards('beauty'); event.preventDefault();"
+                  onclick="event.preventDefault(); displayCards('beauty'); "
                   >beauty</a
                 >
                 <div class="st-content st-beautyDD">
@@ -525,17 +525,20 @@
         <!-- rahul and pradeep -->
 
         <div id="deepSideBar">
-          <a href="">All Designers</a>
-          <a href="">Clothing</a>
-          <a href="">Bags</a>
-          <a href="">Shoes</a>
-          <a href="">Jewelry</a>
-          <a href="">Accessories</a>
-          <a href="">Beauty</a>
-          <a href="">Home</a>
-          <a href="">Pre-Owned</a>
+          <h4>ALL DESIGNERS</h4>
+          <a href="#">All Designers</a>
+          <a href="#">Clothing</a>
+          <a href="#">Bags</a>
+          <a href="#">Shoes</a>
+          <a href="#">Jewelry</a>
+          <a href="#">Accessories</a>
+          <a href="#">Beauty</a>
+          <a href="#">Home</a>
+          <a href="#">Pre-Owned</a>
         </div>
-        <div id="deepDesigner"></div>
+        <div id="deepDesigner">
+          <h4>ALL DESIGNERS</h4>
+        </div>
       </main>
 
       <footer>
